<resources>
    <string name="app_name">projetoFinal</string>
    <string name="tvEmail">E-mail</string>
    <string name="tvPassword">Senha</string>
    <string name="btLogin">Login</string>
    <string name="tvRegister">Não tem cadastro? Cadastre-se AQUI!</string>
    <string name="tvForgotPassword">Esqueceu a Senha? Clique AQUI!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="magic_card">Magic Card</string>
    <string name="image_from_the_register">image from the register</string>
    <string name="repeat_password">Repetir a senha</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="recover_Password">Recover Password</string>
    <string name="digite_seu_e_mail_cadastrado">Digite seu E-mail Cadastrado</string>

    <string name="btChamarAPI">Chamar API</string>

    <string name="email_required">E-mail obrigatório!</string>
    <string name="password_required">Senha obrigatória!</string>
    <string name="password_confirm">Confirmacao de senha e senha diferentes!</string>
    <string name="password_6_char">Senha menor que 6 cacacteres!</string>
    <string name="register_error">Email invalido ou usuário já cadastrado!</string>
    <string name="login_error">Erro no login, Verifique os dados!</string>
    <string name="card">carta de magic</string>
    <string name="imagem_da_carta">imagem da carta</string>
    <string name="digite_a_senha_novamente">Digite a senha novamente</string>

</resources>